hard-gists/16ce4914683da30f87d0/run.log
=== Docker Run Log for 16ce4914683da30f87d0 ===
Started at: Mi 29. Okt 12:23:38 CET 2025

[2025-10-29 12:23:39] START: Running container for 16ce4914683da30f87d0
[2025-10-29 12:23:39] SUCCESS: Container 0529345e3aa02367529a887c5f1745c3375b8f4c6891e69ded7ce6693f544ecc started for 16ce4914683da30f87d0
=== Container logs for 16ce4914683da30f87d0 ===
  File "/snippet.py", line 62
    print "matching result:", idx_pred
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 16ce4914683da30f87d0 ===
[2025-10-29 12:23:41] INFO: Container 0529345e3aa02367529a887c5f1745c3375b8f4c6891e69ded7ce6693f544ecc has stopped
